PythonParser.py
# Generated from Python.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "Python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'break'", "'continue'", "'while'", "'for'", "'in'", 
                     "'range'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", 
                     "')'", "'['", "']'", "','", "':'", "<INVALID>", "'and'", 
                     "'or'", "'not'", "'if'", "'elif'", "'else'", "'>'", 
                     "'>='", "'<'", "'<='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BREAK", "CONTINUE", "WHILE", 
                      "FOR", "IN", "RANGE", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", 
                      "COLON", "BOOLEAN", "AND", "OR", "NOT", "IF", "ELIF", 
                      "ELSE", "GT", "GTE", "LT", "LTE", "EQ", "NEQ", "NAME", 
                      "NUMBER", "STRING", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
                      "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simple_stmt = 2
    RULE_compound_stmt = 3
    RULE_break_stmt = 4
    RULE_continue_stmt = 5
    RULE_if_stmt = 6
    RULE_elif_part = 7
    RULE_else_part = 8
    RULE_while_stmt = 9
    RULE_for_stmt = 10
    RULE_condition = 11
    RULE_or_condition = 12
    RULE_and_condition = 13
    RULE_not_condition = 14
    RULE_comparison = 15
    RULE_comparison_operator = 16
    RULE_assignment_stmt = 17
    RULE_assignment_operator = 18
    RULE_expr = 19
    RULE_term = 20
    RULE_factor = 21
    RULE_atom = 22
    RULE_array = 23
    RULE_array_element = 24
    RULE_function_call = 25
    RULE_range_call = 26

    ruleNames =  [ "program", "statement", "simple_stmt", "compound_stmt", 
                   "break_stmt", "continue_stmt", "if_stmt", "elif_part", 
                   "else_part", "while_stmt", "for_stmt", "condition", "or_condition", 
                   "and_condition", "not_condition", "comparison", "comparison_operator", 
                   "assignment_stmt", "assignment_operator", "expr", "term", 
                   "factor", "atom", "array", "array_element", "function_call", 
                   "range_call" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    BREAK=6
    CONTINUE=7
    WHILE=8
    FOR=9
    IN=10
    RANGE=11
    PLUS=12
    MINUS=13
    MULT=14
    DIV=15
    MOD=16
    LPAREN=17
    RPAREN=18
    LBRACK=19
    RBRACK=20
    COMMA=21
    COLON=22
    BOOLEAN=23
    AND=24
    OR=25
    NOT=26
    IF=27
    ELIF=28
    ELSE=29
    GT=30
    GTE=31
    LT=32
    LTE=33
    EQ=34
    NEQ=35
    NAME=36
    NUMBER=37
    STRING=38
    SINGLE_LINE_COMMENT=39
    MULTI_LINE_COMMENT=40
    NEWLINE=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def getRuleIndex(self):
            return PythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2680202869696) != 0):
                self.state = 56
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6, 7, 8, 9, 11, 12, 13, 17, 19, 23, 27, 36, 37, 38]:
                    self.state = 54
                    self.statement()
                    pass
                elif token in [41]:
                    self.state = 55
                    self.match(PythonParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7, 11, 12, 13, 17, 19, 23, 36, 37, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.simple_stmt()
                pass
            elif token in [8, 9, 27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_stmt(self):
            return self.getTypedRuleContext(PythonParser.Assignment_stmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(PythonParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(PythonParser.Continue_stmtContext,0)


        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)




    def simple_stmt(self):

        localctx = PythonParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 67
                self.assignment_stmt()
                pass

            elif la_ == 2:
                self.state = 68
                self.expr()
                pass

            elif la_ == 3:
                self.state = 69
                self.break_stmt()
                pass

            elif la_ == 4:
                self.state = 70
                self.continue_stmt()
                pass


            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 73
                self.match(PythonParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(PythonParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(PythonParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(PythonParser.For_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)




    def compound_stmt(self):

        localctx = PythonParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_stmt)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.if_stmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.while_stmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.for_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(PythonParser.BREAK, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_break_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_stmt" ):
                listener.enterBreak_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_stmt" ):
                listener.exitBreak_stmt(self)




    def break_stmt(self):

        localctx = PythonParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PythonParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continue_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(PythonParser.CONTINUE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_continue_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinue_stmt" ):
                listener.enterContinue_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinue_stmt" ):
                listener.exitContinue_stmt(self)




    def continue_stmt(self):

        localctx = PythonParser.Continue_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_continue_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PythonParser.CONTINUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(PythonParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def elif_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Elif_partContext)
            else:
                return self.getTypedRuleContext(PythonParser.Elif_partContext,i)


        def else_part(self):
            return self.getTypedRuleContext(PythonParser.Else_partContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = PythonParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PythonParser.IF)
            self.state = 86
            self.condition()
            self.state = 87
            self.match(PythonParser.COLON)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 88
                self.match(PythonParser.NEWLINE)


            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.statement() 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 97
                    self.elif_part() 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 103
                self.else_part()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(PythonParser.ELIF, 0)

        def condition(self):
            return self.getTypedRuleContext(PythonParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_elif_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif_part" ):
                listener.enterElif_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif_part" ):
                listener.exitElif_part(self)




    def elif_part(self):

        localctx = PythonParser.Elif_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elif_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PythonParser.ELIF)
            self.state = 107
            self.condition()
            self.state = 108
            self.match(PythonParser.COLON)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 109
                self.match(PythonParser.NEWLINE)


            self.state = 115
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 112
                    self.statement() 
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(PythonParser.ELSE, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_else_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_part" ):
                listener.enterElse_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_part" ):
                listener.exitElse_part(self)




    def else_part(self):

        localctx = PythonParser.Else_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_else_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PythonParser.ELSE)
            self.state = 119
            self.match(PythonParser.COLON)
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 120
                self.match(PythonParser.NEWLINE)


            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 123
                    self.statement() 
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(PythonParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)




    def while_stmt(self):

        localctx = PythonParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PythonParser.WHILE)
            self.state = 130
            self.condition()
            self.state = 131
            self.match(PythonParser.COLON)
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 132
                self.match(PythonParser.NEWLINE)


            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 135
                    self.statement() 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PythonParser.FOR, 0)

        def NAME(self):
            return self.getToken(PythonParser.NAME, 0)

        def IN(self):
            return self.getToken(PythonParser.IN, 0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def range_call(self):
            return self.getTypedRuleContext(PythonParser.Range_callContext,0)


        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_for_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_stmt" ):
                listener.enterFor_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_stmt" ):
                listener.exitFor_stmt(self)




    def for_stmt(self):

        localctx = PythonParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_for_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(PythonParser.FOR)
            self.state = 142
            self.match(PythonParser.NAME)
            self.state = 143
            self.match(PythonParser.IN)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 144
                self.expr()
                pass

            elif la_ == 2:
                self.state = 145
                self.range_call()
                pass


            self.state = 148
            self.match(PythonParser.COLON)
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 149
                self.match(PythonParser.NEWLINE)


            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 152
                    self.statement() 
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(PythonParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def or_condition(self):
            return self.getTypedRuleContext(PythonParser.Or_conditionContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = PythonParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condition)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(PythonParser.LPAREN)
                self.state = 159
                self.condition()
                self.state = 160
                self.match(PythonParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.or_condition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.And_conditionContext)
            else:
                return self.getTypedRuleContext(PythonParser.And_conditionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.OR)
            else:
                return self.getToken(PythonParser.OR, i)

        def getRuleIndex(self):
            return PythonParser.RULE_or_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_condition" ):
                listener.enterOr_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_condition" ):
                listener.exitOr_condition(self)




    def or_condition(self):

        localctx = PythonParser.Or_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_or_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.and_condition()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 166
                self.match(PythonParser.OR)
                self.state = 167
                self.and_condition()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Not_conditionContext)
            else:
                return self.getTypedRuleContext(PythonParser.Not_conditionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.AND)
            else:
                return self.getToken(PythonParser.AND, i)

        def getRuleIndex(self):
            return PythonParser.RULE_and_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_condition" ):
                listener.enterAnd_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_condition" ):
                listener.exitAnd_condition(self)




    def and_condition(self):

        localctx = PythonParser.And_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_and_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.not_condition()
